Fix padding on mobile container

--- a/webroot/css/public/home.mobile.css
+++ b/webroot/css/public/home.mobile.css
@@ -5,7 +5,7 @@
     #home {
         position: static;
         margin: 0;
-        padding: 0;
+        padding: 30px 15px;
         font-family: Panama, sans-serif;
     }
 
